--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background: url('images/myslf.png');
+    background: url('./myslf.png');
     background-size: 55% auto;
     background-repeat: no-repeat;
     background-position: center;
