--- a/style.css
+++ b/style.css
@@ -314,6 +314,11 @@ nav ul li a:hover::after{  /* so, when we hove over items then it will show some
     font-size: 25px;
 }
 
+.contact-left p a{
+    text-decoration: none;
+    color: white;
+}
+
 .social-icons{
     margin-top: 30px;
 }
